--- a/requirements.txt
+++ b/requirements.txt
@@ -33,10 +33,10 @@ empy>=3.3.4
 lark>=1.1.2
 
 # ROS2 Message Generation
-ament_cmake>=1.1.0
-ament_cmake_python>=1.1.0
-ament_lint_auto>=0.11.0
-ament_lint_common>=0.11.0
+#ament_cmake>=1.1.0
+#ament_cmake_python>=1.1.0
+#ament_lint_auto>=0.11.0
+#ament_lint_common>=0.11.0
 
 # Additional Dependencies
 #pywin32>=300; platform_system=="Windows"  # Windows-specific
