Rename package from 'decentralized_control' to 'dec_control' in CMakeLists.txt, package.xml, and setup.py for consistency.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(decentralized_control)
+project(dec_control)
 
 # Find required packages
 find_package(ament_cmake REQUIRED)
