--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>decentralized_control</name>
+  <name>dec_control</name>
   <version>0.1.0</version>
   <description>Decentralized control for dual mobile manipulators</description>
   <maintainer email="thomas.lehuray@outlook.com">Tom Le Huray</maintainer>
