--- a/decentralized_auction_mm/package.xml
+++ b/decentralized_auction_mm/package.xml
@@ -12,6 +12,7 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   
+  <!-- ROS2 Core dependencies -->
   <depend>rclcpp</depend>
   <depend>rclcpp_action</depend>
   <depend>std_msgs</depend>
@@ -19,13 +20,25 @@
   <depend>sensor_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>visualization_msgs</depend>
-  <depend>gazebo_ros</depend>
-  <depend>gazebo_ros_pkgs</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
+  
+  <!-- Gazebo dependencies -->
+  <depend>gazebo_ros</depend>
+  <depend>gazebo_ros_pkgs</depend>
+  
+  <!-- TurtleBot3 dependencies -->
   <depend>turtlebot3_msgs</depend>
+  <depend>turtlebot3_description</depend>
+  <depend>turtlebot3_simulations</depend>
+  
+  <!-- OpenMANIPULATOR dependencies -->
   <depend>open_manipulator_msgs</depend>
+  <depend>open_manipulator_x_description</depend>
+  <depend>open_manipulator_x_libs</depend>
+  
+  <!-- Other dependencies -->
   <depend>eigen</depend>
   
   <build_depend>rosidl_default_generators</build_depend>
