--- a/decentralized_auction_mm/package.xml
+++ b/decentralized_auction_mm/package.xml
@@ -36,6 +36,7 @@
   <depend>turtlebot3_simulations</depend>
   
   <!-- OpenMANIPULATOR dependencies -->
+  <depend>open_manipulator_msgs</depend>
   <depend>open_manipulator_x_description</depend>
   <depend>open_manipulator_x_libs</depend>
   
