--- a/decentralized_auction_mm/CMakeLists.txt
+++ b/decentralized_auction_mm/CMakeLists.txt
@@ -173,7 +173,7 @@ ament_target_dependencies(auction_node
 if(HAVE_OPEN_MANIPULATOR)
   ament_target_dependencies(robot_node
     rclcpp geometry_msgs sensor_msgs nav_msgs tf2 tf2_ros tf2_geometry_msgs
-    turtlebot3_msgs open_manipulator_msgs
+    turtlebot3_msgs open_manipulator
   )
 else()
   ament_target_dependencies(robot_node
