--- a/decentralized_auction_mm/CMakeLists.txt
+++ b/decentralized_auction_mm/CMakeLists.txt
@@ -26,6 +26,7 @@ find_package(tf2_geometry_msgs REQUIRED)
 find_package(turtlebot3_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 find_package(Eigen3 REQUIRED)
+find_package(open_manipulator REQUIRED)
 
 # Find MoveIt packages
 find_package(moveit_ros_planning_interface QUIET)
@@ -66,7 +67,7 @@ find_package(gazebo REQUIRED)
 include_directories(
   include
   ${EIGEN3_INCLUDE_DIRS}
-  ${GAZEBO_LIBRARY_DIRS}
+  ${GAZEBO_INCLUDE_DIRS}
 )
 link_directories(${GAZEBO_LIBRARY_DIRS})
 
@@ -151,7 +152,7 @@ ament_target_dependencies(auction_components
 if(HAVE_OPEN_MANIPULATOR)
   ament_target_dependencies(robot_components
     rclcpp geometry_msgs sensor_msgs nav_msgs tf2 tf2_ros tf2_geometry_msgs
-    turtlebot3_msgs moveit_ros_planning_interface
+    turtlebot3_msgs open_manipulator_msgs
   )
 else()
   ament_target_dependencies(robot_components
@@ -176,7 +177,7 @@ ament_target_dependencies(auction_node
 if(HAVE_OPEN_MANIPULATOR)
   ament_target_dependencies(robot_node
     rclcpp geometry_msgs sensor_msgs nav_msgs tf2 tf2_ros tf2_geometry_msgs
-    turtlebot3_msgs moveit_ros_planning_interface open_manipulator
+    turtlebot3_msgs open_manipulator
   )
 else()
   ament_target_dependencies(robot_node
